--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,5 +3,5 @@ License: DFCI
 Author: Rizky Kafrawi <rizky_kafrawi@dfci.harvard.edu>
 # AuthorUrl: http://www.rstudio.com/
 Tags: getting-started rds_vis with four visuals
-DisplayMode: Showcase
+DisplayMode: normal
 Type: Shiny
